--- a/popup.html
+++ b/popup.html
@@ -1,21 +1,151 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<html>
-
 <head>
     <meta charset="UTF-8">
     <title>Lunfill</title>
+    <style>
+        body {
+            width: 400px;
+            padding: 20px;
+            font-family: Arial, sans-serif;
+            box-sizing: border-box;
+        }
+
+        input,
+        button,
+        .scroll,
+        .modal-content {
+            border-radius: 4px;
+        }
+
+        label {
+            font-size: 14px;
+            margin: 10px 0;
+        }
+
+        .column {
+            display: flex;
+            align-items: center;
+            padding: 12px 20px;
+            text-decoration: none;
+            color: rgb(49, 49, 49);
+            font-weight: bold;
+            border-bottom: 1px solid #e5e5e5;
+            cursor: pointer;
+            transition: background-color 0.5s ease;
+        }
+
+        .column:hover {
+            background-color: #dcdcdc;
+        }
+
+        .scroll {
+            height: 130px;
+            border: rgb(185, 185, 185) solid 2px;
+            overflow: auto;
+        }
+
+        input {
+            background: #fff;
+            border: none;
+            padding: 10px;
+            border: 2px solid #ccc;
+            outline: none;
+            height: 100%;
+            width: calc(100% - 10px);
+            transition: all 0.5s ease;
+            margin-right: 5px;
+            flex: 1;
+        }
+
+        input:focus {
+            background: #f9f9f9;
+        }
+
+        button {
+            cursor: pointer;
+            border: 2px solid #ccc;
+            padding: 8px 10px;
+            background: #fff;
+            font-weight: bold;
+            color: #333;
+            outline: none;
+            transition: all 0.5s ease;
+            flex: 1;
+        }
+
+
+        button:hover {
+            background-color: #f5f5f5;
+        }
+
+        #removePresetButton,
+        #confirmDelete {
+            color: #c50000;
+            background: none;
+            border: 2px solid #c50000;
+        }
+
+        #removePresetButton:hover,
+        #confirmDelete:hover {
+            background-color: #fff5f5;
+        }
+
+        .input_container {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+
+        .modal {
+            display: none;
+            position: fixed;
+            transition: all 0.5s ease;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            text-align: center;
+        }
+
+        #confirmDelete,
+        #cancelDelete {
+            margin: 5px;
+        }
+    </style>
 </head>
 
 <body>
-    <select name="pref" id="pref">
-        <option value="" selected>保存したい行き先を入力してください</option>
-    </select>
-    <button id="openButton">開く</button>
-    <button id="addPresetButton">追加</button>
-    <button id="removePresetButton">削除</button>
+    <label for="pref">行き先</label>
+    <div class="scroll">
+        <div id="presetList" class="column-container"></div>
+    </div>
+    <label for="newPresetInput">新しい行き先を入力</label>
+    <div class="input_container">
+        <input type="text" id="newPresetInput" placeholder="ファミマ">
+        <button id="addPresetButton">追加</button>
+    </div>
+    <button id="removePresetButton">すべて削除</button>
 
+    <div id="confirmationModal" class="modal">
+        <div class="modal-content">
+            <p>すべてのプリセットを削除しますか？</p>
+            <button id="confirmDelete">はい</button>
+            <button id="cancelDelete">キャンセル</button>
+        </div>
+    </div>
     <script src="popup.js"></script>
 </body>
 
